test start/stop
